# calocom

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  tmp
.github/workflows/: build-push-docker-image.yml
compiler/: Cargo.toml  Makefile.toml
compiler/src/: ast.rs  lib.rs  main.rs  sym.rs  vis.rs
compiler/src/backend/: codegen.rs  memory.rs  mod.rs  name_mangling.rs  old_codegen.rs  runtime.rs
compiler/src/common/: dump.rs  mod.rs  name_context.rs  ref_path.rs  runtime.rs  sym.rs  type_context.rs  unique_name.rs
compiler/src/frontend/: grammar.pest  mod.rs  tests.rs
compiler/src/midend/: middle_ir.rs  mod.rs  name_context.rs  name_decoration.rs  name_mangling.rs  new_middle_ir.rs  pattern_matrix.rs  type_context.rs  typed_ast.rs  unique_name.rs
document/: pipeline.html
example/accept/: advisor.mag  mat.mag  qs.mag
example/stage1/: adt.mag  at.mag  hello_world.mag  nat.mag
example/stage2/: sort.mag
example/stage3/: closure.mag
example/stage4/: generic.mag
example/test/: demo.mag  full.mag  simple.mag
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs  tmp.mag
frontend/src/frontend/: mod.rs  trans.rs
frontend/src/parser/: mod.rs
runtime/: Cargo.toml  Makefile.toml
runtime/src/: alloc.rs  aux.rs  console.rs  core.rs  lib.rs  panic.rs
runtime/src/std/: array.rs  io.rs  mod.rs  string.rs
show/: b.mag
src/: ast.rs  lib.rs  main.rs
src/backend/: mod.rs
src/frontend/: grammar.pest  mod.rs
testsuite/: advisor  advisor.mag  matrix-mul  matrix-mul-tester  quicksort  quicksort-tester  quicksort.mag  test-all.sh
(+11 files in other folders)
