[package]
name = "calocom-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm13-0",
] }
paste = "1.0"
either = "1.6"
clap = { version = "3.1", features = ["derive"] }
owo-colors = "3"
num_enum = "0.5.7"
strum = { version = "0.24", features = ["derive"] }

[features]
frontend = []
typed-ast = ["frontend"]
#middle-ir = ["typed-ast"]
#midend = ["middle-ir", "typed-ast"]
#backend = ["midend"]
default = ["frontend"]
